# greenpoll

./: .gitignore  CLAUDE.md  DATASET_DOWNLOAD.md  DATA_DOWNLOAD_COMPLETE.md  README.md  ROADMAP.html  ROADMAP.md  STEP2_SUMMARY.md  convert_to_docx.js  convert_to_pdf.py  goal.md  package-lock.json  pyproject.toml
configs/datasets/: apple.yaml  kiwi.yaml  strawberry.yaml  tomato.yaml
configs/experiments/: crosspoll.yaml
docs/: notes.md
examples/: README.md
experiments/: registry.csv
learning/: CHEATSHEET.html  CHEATSHEET.md  KNOWN_GAPS.md  README.html  README.md
learning/slides/: README.md  _template.html  lesson00-repo-map.html  lesson01-pyproject-testing.html  lesson06-harmonize-labels.html  lesson07-pretrain-joint.html  lesson08-run-baselines.html  lesson09-paper-assets.html
ops/: DECISIONS.md  NEXT_ACTIONS.md  SESSION_HANDOFF.md
paper/: CrossPoll_Paper.docx  CrossPoll_Paper.html
paper/arxiv/: main.tex  references.bib  results_table.tex
paper/arxiv/figures/: README.md
paper/arxiv/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methods.tex  related_work.tex  results.tex
paper/manuscript/: paper.tex  references.bib
paper/manuscript/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methods.tex  related_work.tex  results.tex
results/: summary.csv
roadmap/: roadmap.html
scripts/: build_paper_assets.py  download_datasets.py  harmonize_labels.py  pretrain_joint.py  run_baselines.py  setup_roboflow_auth.sh
src/greenpoll/cli/: __init__.py
(+1 files in other folders)
