[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenpoll"
version = "0.1.0"
description = "Open-source flower detection and pollination planning for greenhouse robotics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Pankaj Kushwaha"}
]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "networkx>=3.2",
  "opencv-python>=4.9",
  "pyyaml>=6.0",
  "ultralytics>=8.2",
  "torch>=2.0",
  "torchvision>=0.15",
  "matplotlib>=3.8",
  "seaborn>=0.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.scripts]
greenpoll = "greenpoll.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
